frontend/test/should_fail/cast_node_types.grg
using cast_model;

rule r {
	n:N;
	
	modify {
	---
		eval {
			def unrelN:UnrelN = (UnrelN)n;
		}
	}
}
